tests/ui/type/type-check/issue-22897.stderr
error[E0282]: type annotations needed
  --> $DIR/issue-22897.rs:4:5
   |
LL |     [];
   |     ^^ cannot infer type for array `[_; 0]`

error: aborting due to previous error

For more information about this error, try `crablangc --explain E0282`.
